gcc/testsuite/rust/rustc/ui/diagnostic_namespace/requires_path_dg.rs
#[diagnostic]
// { dg-error "" "" { target *-*-* } .-1 }
pub struct Bar;


fn main() {
}

